# TheForceEngine

./: CMakeLists.txt  CMakeSettings.json  README.md  vcpkg.json
.github/workflows/: ubuntu-gcc.yml
TheForceEngine/: TheForceEngine.vcxproj  TheForceEngine.vcxproj.filters  main.cpp
TheForceEngine/Captions/: subtitles-fr.txt
TheForceEngine/Documentation/markdown/: Credits.md
TheForceEngine/Documentation/markdown/remaster-cutscenes/: README.md  architecture.md  dcss-format.md  modding-guide.md  troubleshooting.md  video-conversion.md
TheForceEngine/EditorDef/DarkForces/: LogicDef.ini  VarDef.ini
TheForceEngine/ExternalData/DarkForces/: weaponWheel.json  weapons.json
TheForceEngine/Shaders/: quad2dColor.frag  yuv2rgb.frag  yuv2rgb.vert
TheForceEngine/TFE_A11y/: accessibility.cpp
TheForceEngine/TFE_Asset/: ogvPlayer.h  srtParser.cpp  srtParser.h
TheForceEngine/TFE_Audio/: CMakeLists.txt  audioSystem.cpp  audioSystem.h  midiPlayer.cpp  oggDecode.cpp  oggDecode.h  oggMusicPlayer.cpp  oggMusicPlayer.h  systemMidiDevice.cpp  systemMidiDevice.h
TheForceEngine/TFE_DarkForces/: darkForcesMain.cpp  darkForcesMain.h  gameMusic.cpp  gameMusic.h  hitEffect.cpp  logic.cpp  mission.cpp  pickup.cpp  pickup.h  player.cpp  player.h  projectile.cpp  projectile.h  sound.cpp  vueLogic.cpp  weapon.cpp  weapon.h  weaponFireFunc.cpp  weaponFireFunc.h  weaponWheel.cpp  weaponWheel.h
TheForceEngine/TFE_DarkForces/Actor/: actor.cpp  actor.h  actorEnhanced.cpp  actorEnhanced.h  actorSerialization.cpp  bobaFett.cpp  enemies.cpp
TheForceEngine/TFE_DarkForces/GameUI/: escapeMenu.cpp  pda.cpp
TheForceEngine/TFE_DarkForces/Landru/: cutscene.cpp  cutscene.h  highResActor.cpp  highResActor.h  lactor.cpp  lactor.h  lsound.cpp  modCutscene.cpp  modCutscene.h
TheForceEngine/TFE_DarkForces/Remaster/: dcssParser.cpp  dcssParser.h  ogvPlayer.cpp  ogvPlayer.h  remasterCutscenes.cpp  remasterCutscenes.h  srtParser.cpp  srtParser.h
TheForceEngine/TFE_DarkForces/Scripting/: gs_game.cpp  gs_game.h  gs_level.cpp  gs_level.h  gs_system.cpp  scriptObject.cpp  scriptWall.cpp  scriptWall.h
TheForceEngine/TFE_Editor/: historyView.cpp
TheForceEngine/TFE_Editor/LevelEditor/: editNotes.cpp  infoPanel.cpp  levelEditorData.cpp  levelEditorData.h  levelEditorHistory.cpp  levelEditorHistory.h  levelEditorInf.cpp  note.cpp  note.h
TheForceEngine/TFE_Editor/LevelEditor/Scripting/: ls_level.cpp  ls_system.cpp
TheForceEngine/TFE_ExternalData/: audioExternal.cpp  audioExternal.h  customEffect.cpp  customEffect.h  customProjectile.cpp  customProjectile.h  dfLogics.cpp  dfLogics.h  musicExternal.cpp  musicExternal.h  soundExternal.cpp  soundExternal.h  weaponExternal.cpp  weaponExternal.h  weaponWheelExternal.cpp  weaponWheelExternal.h
TheForceEngine/TFE_FileSystem/: CMakeLists.txt  fileutil.cpp  filewriterAsync.cpp  paths.cpp
TheForceEngine/TFE_ForceScript/: CMakeLists.txt
TheForceEngine/TFE_ForceScript/ScriptAPI-Shared/: scriptLevelShared.cpp  scriptLevelShared.h  scriptTest.cpp  sharedScriptAPI.cpp
TheForceEngine/TFE_FrontEndUI/: frontEndUi.cpp  frontEndUi.h  modLoader.cpp
TheForceEngine/TFE_Game/: saveSystem.cpp
TheForceEngine/TFE_Input/: inputMapping.cpp  inputMapping.h  replay.cpp
TheForceEngine/TFE_Jedi/InfSystem/: infTypesInternal.h
TheForceEngine/TFE_Jedi/Level/: levelData.h  robjData.h  rtexture.cpp
TheForceEngine/TFE_Jedi/Renderer/: jediRenderer.cpp  virtualFramebuffer.cpp
TheForceEngine/TFE_Jedi/Renderer/RClassic_Float/: rflatFloat.cpp
TheForceEngine/TFE_Jedi/Renderer/RClassic_GPU/: rsectorGPU.cpp  screenDrawGPU.cpp  screenDrawGPU.h
TheForceEngine/TFE_RenderBackend/: renderBackend.h
TheForceEngine/TFE_RenderBackend/Win32OpenGL/: renderBackend.cpp  renderTarget.cpp  renderTarget.h  screenCapture.cpp
TheForceEngine/TFE_RenderShared/: quadDraw2d.cpp  quadDraw2d.h
TheForceEngine/TFE_Settings/: settings.cpp  settings.h
TheForceEngine/TFE_System/: log.cpp  system.cpp  utf8.cpp
TheForceEngine/TFE_Ui/: markdown.cpp
TheForceEngine/UI_Text/: DFRemasteredCredits.txt
TheForceEngine/ogg_theora_win32/lib/x64/: ogg.lib  theora.lib  theoradec.lib  theoraenc.lib  vorbis.lib  vorbisenc.lib  vorbisfile.lib
